kanc/src/tests/sample_code/should_fail/single_file/bind/ref_variant_in_prev_variant.k
type U {
    .u: U,
}

type Bar(T: Type, x: T) {
    .b: Bar(Bar(U, U.u), Bar.c),
    .c: Bar(U, U.u),
}
